# dev.env

./: .gitignore  README.md
Linux/scripts/: post-install.sh
Python/Installing Python/: Install_python_development_env.ps1  README.md  install_python_development_env.ps1
Python/Project Templates/: README.md  cookiecutter.json  pyproject.toml
Python/Project Templates/Template Structure/: pyproject.toml
Python/Project Templates/Template Structure/tests/: __init__.py
Python/Project Templates/{{ cookiecutter.__project_name }}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
Python/Project Templates/{{ cookiecutter.__project_name }}/tests/: __init__.py
Python/Project Templates/{{ cookiecutter.__project_name }}/{{ cookiecutter.__package_name }}/: config.py  main.py
Python/Project Templates/{{ cookiecutter.__project_name }}/{{ cookiecutter.__package_name }}/resources/: project_task.xml
Python/Project Templates/{{ cookiecutter.__project_name }}/{{ cookiecutter.__package_name }}/utils/: create_tasks.py
Python/Toolbox/git/: custom_clone.py
Windows/: post-install.ps1
Windows/Apps/: InstallManifests.ps1  README.md
Windows/Apps/manifest/: core.json  dev.json  device_apps.json  other.json
Windows/Custom OS Installation/scripts/: Post-Install-Updates.ps1
Windows/scripts/: GetApps.ps1  Install-ipfs-cli.ps1
