[tool.poetry]
name = "{{package_name}}"
version = "0.1.0"
description = ""
authors = ["SethDocherty <sddocherty@gmail.com>"]
readme = "README.md"
repository = "https://github.com/<user name>/<repo name>"
packages = [{include = "{{package_name}}"}]

[tool.poetry.dependencies]
python = "3.10.*"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-clarity = "^1.0.1"
pre-commit = "^3.3.3"
pdoc3 = "^0.10.0"

[tool.poetry.scripts]
create_task = "{{package_name}}.util.create_tasks:create"

[tool.pytest.ini_options]
# Details on configuration options can be found here: 
#  - https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
cache_dir = "tests/.pytest_cache"
testpaths = [
    "tests",
]
python_files = [
    "*_tests.py",
    ]
# Adding command-line arguments for pytest-clarity
addopts = "-vv --diff-symbols"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.mypy_cache
| \.venv 
)/ 
'''

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
